<resources>
    <string name="app_name">BucketManagementDemoP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cloud_type">Cloud</string>
    <string name="local_type">Local</string>
    <string name="save_as">Export All</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
</resources>
