<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListView
        android:id="@+id/file_list_v"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants">
    </ListView>

    <LinearLayout
        android:id="@+id/operation_v"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="bottom"
        android:background="@color/proc_background"
        android:orientation="horizontal">

        <Button
            android:id="@+id/updownloadButton"
            android:textColor="@color/white"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:gravity="center"
            android:weightSum="1"
            android:text="@string/upload"
            android:layout_weight="1"
            android:background="@drawable/button_selector"/>

        <Button
            android:id="@+id/deleteButton"
            android:textColor="@color/white"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:gravity="center"
            android:text="@string/delete"
            android:weightSum="1"
            android:layout_weight="1"
            android:background="@drawable/button_selector"/>

        <Button
            android:id="@+id/reflashButton"
            android:textColor="@color/white"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/refresh"/>

        <Button
            android:id="@+id/saveButton"
            android:textColor="@color/white"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/save_as"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>