<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title_background"
    tools:context=".BrowserActivity">
    <LinearLayout
        android:id="@+id/file_type"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/export_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:text="@string/save_as"
            android:textSize="32dp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:visibility="gone"/>

        <Button
            android:id="@+id/local_type"
            android:text="@string/local_type"
            android:textSize="32dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableBottom="@drawable/arrow_up"
            android:background="@drawable/button_selector"/>
        <Button
            android:id="@+id/cloud_type"
            android:text="@string/cloud_type"
            android:textSize="32dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/button_selector"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/id_content"
        android:layout_below="@id/file_type"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/content_background">

    </FrameLayout>
</RelativeLayout>

